<resources>
    <string name="app_name">Escuelas de informática</string>
    <string name="title_places">Lugares</string>
    <string name="title_contacts">Contactos</string>
    <string name="title_messages">Mensajes</string>

    <string name="title_activity_places">Nuevo lugar</string>
    <string name="action_next"> Siguiente </string>
    <string name="action_save"> Guardar </string>


    <string name="name_field_label">Nombre (*)</string>
    <string name="description_field_label">Descripción</string>
    <string name="required_field">(*) Campo obligatorio</string>

    <string name="title_activity_messages">Nuevo mensaje</string>
    <string name="send_message_activity_messages">Enviar mensaje</string>
    <string name="destination_activity_messages">Destinatario</string>
    <string name="text_activity_messages">Mensaje</string>


    <!-- Messages -->
    <string name="invalid_place_name">Debe ingresar un nombre para el lugar</string>
    <string name="invalid_place_latLng">Debe seleccionar un punto en el mapa para continuar</string>
    <string name="invalid_message_body">Debe completar el campo mensaje</string>
    <string name="invalid_message_receiver"> Debe completar el campo destinatario </string>
    <string name="no_connection_message">Error al conectar</string>
    <string name="no_connection_action">Reintentar</string>
    <string name="connecting_user_message">Conectando</string>
    <string name="registering_user_message">Registrando</string>
    <string name="message_sent">Mensaje Enviado</string>




    <!-- Static Undefined Resources -->
    <string name="undefined_string"> Sin especificar</string>
    <integer name="undefined_image"> 0 </integer>

    <string name="action_settings">Settings</string>

    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_dwell">Dwell</string>


</resources>
